# sentio-core

./: .bazelignore  .bazelrc  .gitignore  .lintstagedrc  .ls-lint.yml  .mcp.json  .npmrc  .prettierignore  .prettierrc  AGENTS.md  BUILD.bazel  CLAUDE.md  MODULE.bazel  README.md  REPO.bazel  go.mod  go.sum  nogo-config.json  package.json  pnpm-lock.yaml  requirements.in  requirements_linux.txt  requirements_macos.txt  workspace_status.sh
bazel/: .bazelproject  BUILD.bazel  transition.bzl  ts-rules.bzl
bazel/golang/: BUILD.bazel  gateway_go_library.bzl  gateway_grpc_compile.bzl  go_proto_library.bzl
bazel/protoc-gen-es/: BUILD.bazel  protoc-gen-es.mjs  visibility-surface.mjs  visibility-surface.test.mjs
bazel/protoc-gen-es-nodeprecated/: BUILD.bazel  protoc-gen-es-nodeprecated.mjs
bazel/protoc-gen-es/tests/: BUILD.bazel
bazel/python/: BUILD.bazel  python_grpc_compile.bzl  python_grpc_library.bzl
chain/aptos/: BUILD.bazel  client.go  extserver.go  middleware.go  middleware_v2.go  rpc.go  rpc_test.go  slot.go  storage.go  types.go  types_test.go
chain/aptos/chv2/: BUILD.bazel  data.go  schema_mgr.go  schema_mgr_test.go  stat.go  storage.go
chain/aptos/supernode/: BUILD.bazel  middleware.go  middleware_v2.go  rpc.go  rpc_test.go  storage.go  utils.go
chain/aptos/testdata/: tx.json
chain/chain/: BUILD.bazel  cache_latest_slot.go  cache_latest_slot_test.go  dimension_external.go  dimension_simple.go  dimension_simple_test.go  operation.go  operation_test.go  slot.go  toomany.go  toomany_test.go  types.go  util.go  util_test.go
chain/clickhouse/: BUILD.bazel  object.go  object_test.go  partition.go  range_store.go  simple_slot_store.go  store.go
chain/clientpool/: BUILD.bazel  client_pool.go  client_pool_test.go  config.go  config_test.go  external.go  jsonrpc_config.go  snapshot.go  statistic.go  utils.go  utils_http.go  utils_json_rpc.go  utils_json_rpc_test.go  utils_subscribe.go  utils_subscribe_test.go  utils_test.go
chain/clientpool/ex/: BUILD.bazel  statistic.go
chain/evm/: BUILD.bazel  client.go  client_config_test.go  custom_types.go  extserver.go  header_types.go  header_types_test.go  node_utils.go  receipt_types.go  receipt_types_test.go  rpc_types.go  rpc_types_test.go  slot.go  trace_types.go  trace_types_test.go
chain/evm/ch/: BUILD.bazel  blocks.go  logs.go  slot_clickhouse.go  stat.go  traces.go  transactions.go  utils.go  utils_test.go  variation.go  withdrawals.go
chain/evm/protos/: BUILD.bazel  evm.proto
chain/evm/supernode/: BUILD.bazel  custom_function_proxy.go  error_logger.go  eth_ch.go  eth_slot_cache.go  extra.go  helpers.go  proxy.go  proxy_with_slot_cache.go  range_checker.go  range_checker_test.go  rpc.go  rpc_test.go  standard.go  storage.go  subscribe.go  trace_ch.go  trace_slot_cache.go  utils.go  version.go
chain/evm/testdata/: trace-types.json
chain/fuel/: BUILD.bazel  client.go  client_test.go  extserver.go  slot.go  types.go  types_extend.go  types_test.go
chain/fuel/ch/: BUILD.bazel  data.go  schema_mgr.go  stat.go  storage.go  storage_test.go
chain/fuel/supernode/: BUILD.bazel  rpc.go  rpc_test.go  storage.go
chain/move/: BUILD.bazel  types.go  types_test.go  utils.go
chain/redis/: BUILD.bazel  cache.go  cache_test.go  kv_store.go  kv_store_test.go
chain/sol/: BIGQUERY_DATASOURCE_DESIGN.md  BUILD.bazel  client.go  extserver.go  latest_header_test.go  slot.go  sol_test.go  types.go
chain/sol/bq/: BUILD.bazel  convert.go  convert_test.go  dayindex.go  dayindex_test.go  stat.go  store.go  store_integration_test.go
chain/sol/ch/: BUILD.bazel  data.go  data_test.go  schema_mgr.go  stat.go  storage.go
chain/sol/supernode/: BUILD.bazel  first_slot_test.go  rpc.go  rpc_test.go  storage.go
chain/sui/: BUILD.bazel  client.go  client_test.go  extgrpc_json_test.go  extserver.go  extserver_grpc.go  grpc_client_pool.go  query.go  query_test.go  rpc_types.go  rpc_types_v2.go  rpc_types_v2_test.go  slot.go  slot_grpc.go
chain/sui/chv3/: BUILD.bazel  controller.go  converter.go  data.go  schema_mgr.go  stat.go
chain/sui/chv4/: BUILD.bazel  balance.go  balance_test.go  data.go  schema_mgr.go  schema_mgr_test.go  storage.go  storage_stat.go
chain/sui/supernode/: BUILD.bazel  rpc.go  rpc_test.go  storage.go
chain/sui/types/: BUILD.bazel  (+32 more)
common/anyutil/: BUILD.bazel  convert.go  convert_test.go  deref.go  property_getter.go  property_getter_test.go  protos.go
common/cache/: BUILD.bazel  README.md  cache.go  cache_test.go  cacheable.go
common/chains/: BUILD.bazel  chain_id.go  chain_info.go  chains.go  chains_test.go  types.go
common/chx/: BUILD.bazel  controller.go  field.go  field_test.go  operator.go  query.go  settings.go  table.go  table_engine.go  utils.go
common/clickhousemanager/: BUILD.bazel  README.md  conn.go  conn_impl.go  conn_options.go  conn_tracing.go  constants.go  error_code_map.go  flags.go  jwt_token.go  manager.go  manager_test.go  roles.go  sharding.go  sharding_impl.go
common/cmstr/: BUILD.bazel  kvs.go  kvs_test.go
common/compress/: BUILD.bazel  compress.go  compress_test.go
common/concurrency/: BUILD.bazel  do_with_context.go  executor.go  executor_test.go  map.go  map_test.go  resource_manager.go  resource_manager_test.go  resource_waiter.go  resource_waiter_test.go  signal.go  status_waiter.go  status_waiter_test.go  stream.go  switch_waiter.go  sync.go  sync_test.go
common/configmanager/: BUILD.bazel  README.md  encoder.go  manager.go  manager_test.go  pg_provider.go  pg_provider_test.go  redis_provider.go
common/contract/: BUILD.bazel  contract.go  contract_test.go
common/db/: BUILD.bazel  db.go  gorm_logger.go  protojson_serializer.go
common/format/: BUILD.bazel  string_format.go  string_format_test.go
common/formula/: BUILD.bazel  evaluator.go  evaluator_test.go  matrix_index_tree.go  matrix_index_tree_test.go  parser.go  parser_test.go
common/gonanoid/: BUILD.bazel  id.go  id_test.go
processor/: BUILD.bazel  chain_config.go  types.go  version.go  version_test.go
processor/protos/: BUILD.bazel  processor.pb.go  processor.proto  processor_grpc.pb.go
(+840 files in other folders)
