module(
    name = "sentio-core",
    version = "1.0",
)

# wasmer-go: sentioxyz fork consumed as a Bazel module (Bazel-9-ready), not go_deps
bazel_dep(name = "wasmer_go", version = "1.0.4")
git_override(
    module_name = "wasmer_go",
    commit = "477807e833107d0b0aa0203721c6c55cdf32fa6c",
    remote = "https://github.com/sentioxyz/wasmer-go",
)

# scip.proto is published in the root scip-code/scip repository, while this
# package only needs the single proto file for TypeScript generation.
http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

http_file(
    name = "scip_proto_download",
    downloaded_file_path = "scip.proto",
    sha256 = "387f91bea3357a6ab72ae6214c569bf33fddcd3c726a8eacfa1435d65ac347e8",
    urls = ["https://raw.githubusercontent.com/scip-code/scip/v0.7.1/scip.proto"],
)

PROTOBUF_VERSION = "35.0"

PTYHON_VERSION = "3.11"

### Basic
bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "rules_license", version = "1.0.0")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")

### PROTOCBUF
bazel_dep(name = "protobuf", version = PROTOBUF_VERSION)

### Others

bazel_dep(name = "rules_nodejs", version = "6.7.4")
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.51.0")
bazel_dep(name = "bazel_gomock", version = "0.2.0")
bazel_dep(name = "googleapis", version = "0.0.0-20260525-ef19b7b7")
bazel_dep(name = "rules_python", version = "2.0.2")
bazel_dep(name = "rules_python_gazelle_plugin", version = "2.0.2")
bazel_dep(name = "rules_uv", version = "0.89.2")
bazel_dep(name = "aspect_rules_js", version = "3.1.2")
bazel_dep(name = "aspect_rules_ts", version = "3.8.10")
bazel_dep(name = "aspect_rules_py", version = "1.11.5")
bazel_dep(name = "rules_img", version = "0.3.11")
bazel_dep(name = "rules_multirun", version = "0.13.0")
bazel_dep(name = "hermetic_cc_toolchain", version = "4.1.0")

# Force google_benchmark >= 1.9.2: it drops the rules_foreign_cc dependency and
# pulls the foreign_cc-free libpfm@4.11.0.bcr.1 (rules_cc instead). Without this,
# the chain grpc -> opencensus-cpp -> google_benchmark@1.8.4 -> {rules_foreign_cc,
# libpfm} drags in rules_foreign_cc, whose old versions are incompatible with
# Bazel 9. Pinning google_benchmark high enough removes rules_foreign_cc from the
# graph entirely, so no rules_foreign_cc bazel_dep is needed.
# TODO When new grpc is released, remove this
bazel_dep(name = "google_benchmark", version = "1.9.5")
bazel_dep(name = "grpc", version = "1.81.0")

# grpc 1.81.0 pins envoy_api@20251216, which still imports the removed
# com_google_googleapis_imports repo and is incompatible with our pinned
# googleapis@20260525. Bump envoy_api to a version that dropped that reference.
bazel_dep(name = "envoy_api", version = "0.0.0-20260130-84e8436")
bazel_dep(name = "rules_proto_grpc", version = "5.8.0")
bazel_dep(name = "rules_proto_grpc_cpp", version = "5.8.0")
bazel_dep(name = "rules_proto_grpc_go", version = "5.8.0")
bazel_dep(name = "rules_proto_grpc_python", version = "5.8.0")
bazel_dep(name = "rules_proto_grpc_grpc_gateway", version = "5.8.0")
bazel_dep(name = "grpc_ecosystem_grpc_gateway", version = "2.29.0.bcr.3")
bazel_dep(name = "apple_support", version = "2.5.4", repo_name = "build_bazel_apple_support")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = PTYHON_VERSION,
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "core_pip",
    python_version = PTYHON_VERSION,
    requirements_darwin = "//:requirements_macos.txt",
    requirements_linux = "//:requirements_linux.txt",
)
use_repo(pip, "core_pip")

dev_pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
dev_pip.parse(
    hub_name = "core_pypi",
    python_version = PTYHON_VERSION,
    requirements_lock = "//tools:requirements.txt",
)
use_repo(dev_pip, "core_pypi")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(
    version = "1.26.3",
)
go_sdk.nogo(nogo = "//:my_nogo")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")

# to be removed as dependency
# <<< REMOVE_START >>>
go_deps.module_override(
    patch_strip = 1,
    patches = ["//third_party:com_github_ethereum_go_ethereum_secp256k1.patch"],
    path = "github.com/ethereum/go-ethereum",
)
go_deps.module_override(
    patch_strip = 1,
    patches = ["//third_party:com_github_consensys_gnark_crypto.patch"],
    path = "github.com/consensys/gnark-crypto",
)
go_deps.gazelle_default_attributes(
    directives = ["gazelle:proto disable"],
)

# <<< REMOVE_END >>>
#
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_alicebob_miniredis_v2",
    "com_github_aptos_labs_aptos_go_sdk",
    "com_github_blevesearch_bleve",
    "com_github_burntsushi_toml",
    "com_github_bytedance_sonic",
    "com_github_cenkalti_backoff_v4",
    "com_github_clickhouse_clickhouse_go_v2",
    "com_github_cockroachdb_pebble",
    "com_github_dmitriyvtitov_size",
    "com_github_docker_docker",
    "com_github_ethereum_go_ethereum",
    "com_github_fardream_go_bcs",
    "com_github_felixge_httpsnoop",
    "com_github_fergusstrange_embedded_postgres",
    "com_github_gagliardetto_solana_go",
    "com_github_go_faster_errors",
    "com_github_goccy_go_json",
    "com_github_golang_protobuf",
    "com_github_gorilla_handlers",
    "com_github_gorilla_websocket",
    "com_github_graph_gophers_graphql_go",
    "com_github_grpc_ecosystem_go_grpc_middleware_v2",
    "com_github_huandu_go_sqlbuilder",
    "com_github_ipfs_go_ipfs_api",
    "com_github_jinzhu_copier",
    "com_github_kinbiko_jsonassert",
    "com_github_knadh_koanf_parsers_json",
    "com_github_knadh_koanf_parsers_yaml",
    "com_github_knadh_koanf_v2",
    "com_github_matoous_go_nanoid_v2",
    "com_github_mitchellh_hashstructure_v2",
    "com_github_mr_tron_base58",
    "com_github_patrickmn_go_cache",
    "com_github_pkg_errors",
    "com_github_prometheus_client_golang",
    "com_github_redis_go_redis_extra_redisotel_v9",
    "com_github_redis_go_redis_v9",
    "com_github_samber_lo",
    "com_github_sentioxyz_fuel_go",
    "com_github_sentioxyz_golang_lru",
    "com_github_sentioxyz_qs",
    "com_github_sentioxyz_sui_apis",
    "com_github_shirou_gopsutil",
    "com_github_shopspring_decimal",
    "com_github_soheilhy_cmux",
    "com_github_stretchr_testify",
    "com_github_tidwall_sjson",
    "com_github_uptrace_opentelemetry_go_extra_otelgorm",
    "com_github_vmihailenco_msgpack_v5",
    "com_github_wasmerio_wasmer_go",
    "in_gopkg_natefinch_lumberjack_v2",
    "in_gopkg_yaml_v2",
    "in_gopkg_yaml_v3",
    "io_gorm_datatypes",
    "io_gorm_driver_postgres",
    "io_gorm_gorm",
    "io_opentelemetry_go_contrib_instrumentation_google_golang_org_grpc_otelgrpc",
    "io_opentelemetry_go_contrib_instrumentation_net_http_otelhttp",
    "io_opentelemetry_go_otel",
    "io_opentelemetry_go_otel_exporters_otlp_otlpmetric_otlpmetricgrpc",
    "io_opentelemetry_go_otel_exporters_otlp_otlptrace",
    "io_opentelemetry_go_otel_exporters_otlp_otlptrace_otlptracegrpc",
    "io_opentelemetry_go_otel_exporters_stdout_stdoutmetric",
    "io_opentelemetry_go_otel_exporters_stdout_stdouttrace",
    "io_opentelemetry_go_otel_metric",
    "io_opentelemetry_go_otel_sdk",
    "io_opentelemetry_go_otel_sdk_metric",
    "io_opentelemetry_go_otel_trace",
    "org_golang_google_genproto",
    "org_golang_google_genproto_googleapis_api",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
    "org_golang_x_exp",
    "org_golang_x_net",
    "org_modernc_mathutil",
    "org_uber_go_mock",
    "org_uber_go_zap",
)

go_tool_deps = use_extension(
    "@gazelle//:extensions.bzl",
    "go_deps",
    isolate = True,
)
go_tool_deps.from_file(go_mod = "//tools:go.mod")
use_repo(go_tool_deps, "com_github_grpc_ecosystem_protoc_gen_grpc_gateway_ts")

## Nodejs
node = use_extension(
    "@rules_nodejs//nodejs:extensions.bzl",
    "node",
    dev_dependency = True,
)
node.toolchain(node_version = "24.13.0")

npm = use_extension(
    "@aspect_rules_js//npm:extensions.bzl",
    "npm",
    dev_dependency = True,
    isolate = True,
)
npm.npm_translate_lock(
    name = "npm",
    # bins = {
    #     "next": ["next=./dist/bin/next"],
    # },
    data = [
        "//:package.json",
        "//:packages/chain/package.json",
        "//:packages/scip/package.json",
        "//:pnpm-workspace.yaml",
    ],
    npmrc = "//:.npmrc",
    pnpm_lock = "//:pnpm-lock.yaml",
    update_pnpm_lock = True,
)
use_repo(npm, "npm")

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")
pnpm.pnpm(
    name = "pnpm",
    pnpm_version = "10.16.1",
)
use_repo(pnpm, "pnpm")

rules_ts_ext = use_extension(
    "@aspect_rules_ts//ts:extensions.bzl",
    "ext",
    dev_dependency = True,
    isolate = True,
)
rules_ts_ext.deps(
    # curl --silent https://registry.npmjs.org/typescript/6.0.3 | jq -r '.dist.integrity'
    ts_integrity = "sha512-y2TvuxSZPDyQakkFRPZHKFm+KKVqIisdg9/CZwm9ftvKXLP8NRWj38/ODjNbr43SsoXqNuAisEf1GdCxqWcdBw==",
    ts_version_from = "//:package.json",
)
use_repo(rules_ts_ext, "npm_typescript")

### Additional CC Toolchains for cross compile

toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(toolchains, "zig_sdk")

register_toolchains(
    "@zig_sdk//toolchain:linux_amd64_gnu.2.31",
    #    "@zig_sdk//toolchain:linux_arm64_gnu.2.31",
    #    "@zig_sdk//toolchain:windows_amd64",
    #    "@zig_sdk//toolchain:windows_arm64",
)

### OCI Image plugin
pull = use_repo_rule("@rules_img//img:pull.bzl", "pull")

pull(
    name = "distroless_cc_debian12",
    digest = "sha256:72344f7f909a8bf003c67f55687e6d51a441b49661af8f660aa7b285f00e57df",
    registry = "gcr.io",
    repository = "distroless/cc-debian12",
)
