load("@aspect_rules_js//js:defs.bzl", "js_binary")

# protoc plugin: stock protoc-gen-es with deprecated elements stripped from the
# descriptor first. Wired as a proto_plugin() tool in //bazel:BUILD.bazel,
# mirroring how //bazel:ts_proto_bin (@sentio/ts-proto) is provided.
js_binary(
    name = "protoc_gen_es_nodeprecated",
    data = [
        "//:node_modules/@bufbuild/protobuf",
        "//:node_modules/@bufbuild/protoc-gen-es",
        "//:node_modules/@bufbuild/protoplugin",
    ],
    entry_point = "protoc-gen-es-nodeprecated.mjs",
    visibility = ["//visibility:public"],
)
