load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "chain",
    srcs = [
        "cache_latest_slot.go",
        "dimension_external.go",
        "dimension_simple.go",
        "operation.go",
        "types.go",
        "util.go",
    ],
    importpath = "sentioxyz/sentio/chain/chain",
    visibility = ["//visibility:public"],
    deps = [
        "//chain/node",
        "//chain/slot",
        "//common/number",
        "@com_github_pkg_errors//:errors",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel_metric//:metric",
        "@sentio-core//common/concurrency",
        "@sentio-core//common/errgroup",
        "@sentio-core//common/log",
        "@sentio-core//common/timehist",
        "@sentio-core//common/timer",
        "@sentio-core//common/utils",
    ],
)

go_test(
    name = "chain_test",
    srcs = [
        "dimension_simple_test.go",
        "operation_test.go",
    ],
    embed = [":chain"],
    deps = [
        "//chain/slot",
        "//common/number",
        "@com_github_stretchr_testify//assert",
        "@org_uber_go_zap//zapcore",
        "@sentio-core//common/concurrency",
        "@sentio-core//common/log",
        "@sentio-core//common/utils",
    ],
)
